@@ -24,6 +24,8 @@ cod-tools (unreleased)
     - cif_fix_values:
       - looped temperature, density and refinement weighting scheme values
         no longer produce a malformed CIF file.
+    - COD::CIF::Tags::Manage:
+      - preventing from creation of data blocks with disallowed names.
     - COD::DateTime:
       - switched from '\d' to '[0-9]' in regular expressions to match
         digits in dates.
